deploy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy-bootstrap.yaml: |
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901

    static_resources:
      listeners:
      - name: ingress_listener
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10001
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              route_config:
                name: local_route
                virtual_hosts:
                - name: shadowcast_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: order-service
                      request_mirror_policies:
                      - cluster: shadow-service
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                    request_headers_to_remove:
                    - "authorization"
                    - "cookie"
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
      - name: order-service
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        dns_refresh_rate: 5s
        typed_dns_resolver_config:
          name: envoy.network.dns_resolver.cares
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
            resolvers:
            - socket_address:
                address: 10.96.0.10
                port_value: 53
            dns_resolver_options:
              use_tcp_for_dns_lookups: true
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: order-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: order-service.default.svc.cluster.local
                    port_value: 8080

      - name: shadow-service
        type: STRICT_DNS
        dns_lookup_family: V4_ONLY
        dns_refresh_rate: 5s
        typed_dns_resolver_config:
          name: envoy.network.dns_resolver.cares
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig
            resolvers:
            - socket_address:
                address: 10.96.0.10
                port_value: 53
            dns_resolver_options:
              use_tcp_for_dns_lookups: true
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: shadow-service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: shadow-service.default.svc.cluster.local
                    port_value: 8080
